--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "^4.0.4",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
+    "mongoose": "^5.6.7",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1"
   }
